--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,10 +13,10 @@ repos:
     hooks:
       - id: black
   - repo: https://github.com/asottile/blacken-docs
-    rev: v1.10.0
+    rev: 1.16.0 # replace with latest tag on GitHub
     hooks:
       - id: blacken-docs
-        additional_dependencies: [black==19.3b0]
+        additional_dependencies: [black==22.3.0]
   - repo: https://github.com/DavidAnson/markdownlint-cli2
     rev: v0.1.3
     hooks:
